# customer-visit-demo

./: .gitignore  CREDENTIAL_ROTATION_CHECKLIST.md  DEMO_RUNBOOK.md  DEPLOYMENT_GUIDE.md  INTEGRATION_AUDIT_REPORT.md  MODEL_CAPABILITY_AUDIT.md  PHASE2_EXECUTION_REPORT.md  PHASE3_INTEGRATION_REPORT.md  PRE_DEMO_CHECKLIST.md  SECURITY_FIX_REPORT.md  visit_brief.schema.json
customer-intelligence/: .env.example  .gitignore  AI4Search_创新点汇报_PPT.md  Dockerfile.api  README.md  config.yaml  pyproject.toml  research_cli.py  run_server.bat  run_server.py  需求.txt
customer-intelligence/demo-data/: xinghai-manufacturing.json  yunling-transport.json
customer-intelligence/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
customer-intelligence/frontend/server/: index.js  trainingIntegration.js  trainingIntegration.test.mjs  validation.js  validation.test.mjs  visitBrief.js  visitBrief.test.mjs
customer-intelligence/frontend/src/: App.vue  env.d.ts  main.ts  router.ts
customer-intelligence/frontend/tests/: reportMarkdown.test.mjs
customer-intelligence/search_mcp/: __init__.py  config.py  pdf_parser.py  proxy_router.py  scraper.py  server.py  summarizer.py
customer-intelligence/search_mcp/engines/: __init__.py  baidu.py  base.py  bing.py  dblp.py  google.py  semantic_scholar.py  sogou.py
customer-intelligence/search_mcp/smart_search/: __init__.py  company_researcher.py  content_collector.py  keyword_generator.py  product_catalog.py  (+1 more)
customer-intelligence/tests/: test_report_generator.py  test_search_runtime.py  test_security.py
(+260 files in other folders)
